plugins {
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

subprojects {

	group = 'com.emobg'
	version = '0.0.1'

	java {
		sourceCompatibility = JavaVersion.VERSION_21
	}

	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'java-library'

	repositories {
		mavenCentral()
	}

	dependencies {
		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.5'
		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.5'
		testImplementation 'org.assertj:assertj-core:3.17.2'
	}

	test {

		include '**/*UnitTest.class'
		include '**/*ApplicationTest.class'
		include '**/*IT.class'
		testLogging.showStandardStreams(true)
		useJUnitPlatform()
		jvmArgs("-XX:+EnableDynamicAgentLoading")


	}

}